# ece421prj2

./: .gitignore  Cargo.toml  TODO
benches/: insert_search_benchmark.rs
doc/: design.tex
src/: avl.rs  avlnew.rs  inspect.rs  lib.rs  main.rs  ops.rs  redblack.rs  tree.rs  treenew.rs  unbalanced.rs
src/tree/: helper.rs  inspect.rs  node.rs  ops.rs
